[package]
name = "lori_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-service = "2.0.2"
actix-web = "4"
awc = "3.2.0"
colored = "2.0.4"
futures-util = "0.3.28"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
